--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@react-three/fiber": "^7.0.26",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-draggable": "^4.4.5",
     "react-scripts": "^5.0.0",
     "styled-components": "^5.3.3",
     "three": "^0.138.3"
